--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ronty web developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body><h1>fast website</h1>
+<body>
+   <section>
+    <div class="hlaf">
+        <h1>Welcome To</h1>
+        <h1><span class="textcolor">Ronty</span> Website</h1>
+        <h1>Professional Web developer</h1>
+        <p>Being a web developer can offer many benefits. it is a versatile skill that is in high demand, allowing me to create websites, web applications and digital solutions. Thais field offers creative freedom, remote work opportunities and opportunities to work on a variety of projects.Also , technology industry has good earning potential. Iwant to fulfilll my dream of becoming a good web developer.</p>
+    </div>
+    <div class="hlaf">
+        <img src="image/profile.png" alt=""> 
+    </div>
+   </section>
     
 </body>
 </html>
