--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="banner">
     <div class="hlaf">
         <h1>Welcome To</h1>
         <h1><span class="textcolor">Ronty</span> Website</h1>
         <h1>Professional Web developer</h1>
         <p>Being a web developer can offer many benefits. it is a versatile skill that is in high demand, allowing me to create websites, web applications and digital solutions. Thais field offers creative freedom, remote work opportunities and opportunities to work on a variety of projects.Also , technology industry has good earning potential. Iwant to fulfilll my dream of becoming a good web developer.</p>
-    </div>
+        <a class="button" target="_blank" href="https://www.facebook.com/ronty.sarkar.31">HIRE ME </a>
+        </div>
     <div class="hlaf">
         <img src="image/profile.png" alt=""> 
     </div>
