--- a/index.html
+++ b/index.html
@@ -19,9 +19,25 @@
         <a class="button" target="_blank" href="https://www.facebook.com/ronty.sarkar.31">HIRE ME </a>
         </div>
     <div class="hlaf">
-        <img src="image/profile.png" alt=""> 
+        <img src="image/image 11.png" alt=""> 
     </div>
+    </section>
+   
+
+    <section class="dream">
+        <div class="hlaf">
+             <img src="image/image 10.png" alt="">
+        </div>
+        <div class="hlaf">
+            <h2>Big Dream</h2>
+            <h3>Become a Web developer </h3>
+            <p>I already learned the basic HTML and CSS I can build any simple website. can even teach my grandma how to make simple website. My goal is to build 3      wobsites and icam advancod topios</p>
+            <a target="_blank" class="button" href="https://www.facebook.com/ronty.sarkar.31">VISIT MY FACEBOOK</a>
+         </div>
+
    </section>
+
+  
     
 </body>
 </html>
