Finished my first ever website

--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
 
    </section>
 
+   <section class="experience-area">
+    <h2>Experience</h2>
+    <div id="full-stack" class="hlaf experience">
+        <h2>Full Stack Web Dev</h2>
+        <h3 class="textcolor">2023 - Present | Pro level Web Dev</h3>
+        <p>I am the master of HTML. CSS and Javascript. I know everything needed to make a website function, efficient. didn't stop with the web. I went beyond with most popular Javascript framawork callod vue Js.1 evon know tho deployment, server and security. I will give you 100% web solution</p>
+    </div >
+    <div id="baby-web" class="hlaf experience">
+        <h2>Baby Web developer</h2>
+        <h3 class="textcolor">2024-2025 | Programming Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer.! made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Horo.</p>
+
+    </div>
+
+   </section>
+   <footer>
+    <p>Ronty 2023, all rights reserved.</p>
+   </footer>
+
   
     
 </body>
